# learning

./: .gitignore  README.md
code/frontend/educative_html_css_js/css/: semantic_style.css
code/frontend/educative_html_css_js/html/: attributes.html  html_hello.html  reciple.html  semantics.html
code/rust/: README.md  rust.md
code/rust/educative/rust_from_scratch/(1) getting_started/: challenge1.rs  puzzle2.rs
code/rust/educative/rust_from_scratch/(1)_getting_started/: challenge1  challenge2  puzzle1.rs  puzzle2
code/rust/educative/rust_from_scratch/0_other/: fib  fib.rs
code/rust/educative/rust_from_scratch/10_structs/: points_distance  points_distance.rs
code/rust/educative/rust_from_scratch/11_enums/: weekend  weekend.rs
code/rust/educative/rust_from_scratch/12_traits/: can_drive  can_drive.rs
code/rust/educative/rust_from_scratch/13_modules/: traingle_area  traingle_area.rs
code/rust/educative/rust_from_scratch/2_variables/: defining_variables  defining_variables.rs
code/rust/educative/rust_from_scratch/4_operators/: test  (+3 more)
code/rust/hello-rust/: Cargo.toml
code/rust/hello-rust/src/: main.rs
code/rust/snake/: Cargo.toml
code/rust/snake/src/: main.rs
notes/Cryptography Engineering: Design Principles and Practical Applications/: README.md
notes/Cryptography Engineering: Design Principles and Practical Applications/chapter_1/: further_reading.txt
notes/Cryptography Engineering: Design Principles and Practical Applications/chapter_1/exercises/: exercises.aux  exercises.fdb_latexmk  exercises.fls  exercises.out  exercises.tex  exercises.toc
(+28 files in other folders)
