[package]
name = "snake"
version = "0.1.0"
authors = ["Jamie Friel <jamiefriel@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "snake"
path = "src/main.rs"

[dependencies]
piston_window = "0.64.0"
find_folder = "0.3.0"
rand = "0.3.14"